[package]
name = "globe"
version = "0.1.0"
authors = ["Nick Pfundstein <nickpfundstein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "^0.3.40"
wasm-bindgen = "^0.2.63"
rand_distr = "^0.2.2"
ncollide3d = "^0.23.2"
nalgebra = "^0.21.1"

[dependencies.web-sys]
version = "^0.3.40"
features = [
  'CanvasRenderingContext2d',
  'CanvasGradient',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console'
]
